regression_tests/snap/check/testsl11/testsl11.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.10-bf63ac3

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Aug 13 2018 13:11:29

================================================================================
                     Run at 13-AUG-2018 13:42:14 by ccrook



Program options read from testsl11.snp

Job: Regression tests - station lists


Solution type: 3d coordinate adjustment


Coordinates file testsl.crd
      20 stations read

Data file 1: testsl.dat
    Observations between 2000-05-01 and 2000-05-01
      19 height differences
      20 latitudes
      20 longitudes



================================================================================
Regression tests - station lists                            13-AUG-2018 13:42:14

                                     ERRORS

================================================================================

Note: 2 errors reported in testsl11.err
